<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Battleship</string>
    <string name="mainMenuTitle">Battleship</string>
    <string name="action_settings">Settings</string>

    <string name="start">Start Game</string>
    <string name="settings">Settings</string>
    <string name="credits">Credits</string>
    <string name="onePlayer">One player</string>
    <string name="twoPlayer">Two players</string>
    <string name="startViewTitle">Start</string>
    <string name="startViewIntro">Please choose your opponent</string>
    <string name="mainMenu">Main Menu</string>
    <string name="startGame">Start game</string>
    <string name="tvPlayerOneHint">Name of Player 1</string>
    <string name="tvPlayerTwoHint">Name of Player 2</string>

    //used in activity_credits_view.xml
    <string name="creditsMusic">Music made by: \n LE-SIUL</string>
    <string name="creditsDevelopers">Developers: \n Simen Johnsrud \n Morten Kartevoll \n Thea Hove Johansen \n Maja Kirkerød \n Manasa Vallamkondu \n Silje Christensen</string>
    creditsDevelopers
    <string name="creditsTitle">Credits</string>

    //used in activity_end_game_view.xml
    <string name="gameOver">Game over</string>
    <string name="buttonMainMenu">Main menu</string>
    <string name="scores">Score for player 1: \n Score for player 2: </string>
    <string name="congratulations">Congratulations to the winner! </string>

    //used in activity_start_up_view.xml
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="randomizeShips">Randomize ships</string>
    <string name="done">Done</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    //used in activity_switch_view.xml
    <string name="switchPlayer">Battle</string>
    <string name="status">Status</string>
    <string name="difficulty">Difficulty</string>
    <string name="player">Player Ones Turn</string>

    //used in activity_set_ship_view.xml
    <string name="titleSetShip">Place ships for player one</string>

    //used in activity_battle_view.xml
    <string name="titleBattle">Battle</string>
    <string name="confirmShot">Confirm shot</string>
    <string name="nextPlayer">Next player</string>

    //used in activity_settings_view.xml
    <string name="gameMode">Game mode</string>
    <string name="boats">Boats</string>
    <string name="girls">Girls</string>
    <string name="boys">Boys</string>





</resources>
