<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id = "@+id/switchViewHeader"
        android:text="@string/mainMenuTitle"
        android:layout_width="fill_parent"
        android:textSize="25dp"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:layout_below="@+id/switchViewHeader" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_below="@id/buttonStart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />

    <Button
        android:id="@+id/buttonCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/buttonSettings"/>

</RelativeLayout>
