<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:id = "@+id/switchViewHeader"
        android:text="@string/player"
        android:layout_width="fill_parent"
        android:textSize="25dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="59dp"
        android:layout_alignParentTop="true" />
    <TextView
        android:id = "@+id/textViewStatus"
        android:text="@string/status"
        android:layout_width="fill_parent"
        android:textSize="25dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/switchViewHeader"
        android:layout_marginTop="69dp" />
    <Button
        android:id="@+id/buttonSwitchPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchPlayer"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewStatus"
        android:layout_marginTop="50dp"/>

</RelativeLayout>