<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"  android:paddingRight="@dimen/activity_horizontal_margin"
    android:weightSum="1">

    <TextView
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/gameOver"
        android:id="@+id/stringGameOver"
        android:gravity="center"
        android:layout_weight="0.17"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        />

    <TextView
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/congratulations"
        android:id="@+id/textViewCongratulations"
        android:gravity="center"
        android:layout_weight="0.17"
        android:layout_gravity="center_horizontal"
        android:textSize="15dp"
        />

    <TextView
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/scores"
        android:id="@+id/textViewEndScore"
        android:gravity="center"
        android:layout_weight="0.17"
        android:layout_gravity="center_horizontal"
        android:textSize="15dp"
        />
    <Button
        android:id="@+id/buttonMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonMainMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:layout_below="@+id/switchViewHeader"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />

</LinearLayout>