<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id = "@+id/setShipViewHeader"
        android:text="@string/titleSetShip"
        android:layout_width="match_parent"
        android:textSize="25dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setShipGridView"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/setShipViewHeader"
        android:layout_above="@+id/buttonHolderSetShipView" />

    <LinearLayout
        android:id="@+id/buttonHolderSetShipView"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">


        <Button
            android:id="@+id/buttonRandomize"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/randomizeShips"/>

        <Button
            android:id="@+id/buttonDone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/done" />
    </LinearLayout>


</RelativeLayout>