<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:id="@+id/bottomViewHolderBattleView"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/buttonHolderBattleView"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/button"
                android:layout_above="@+id/button2"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/button2"
                android:layout_below="@+id/button"
                />
        </LinearLayout>
    </LinearLayout>

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/boardGridView"
        android:layout_below="@+id/textBattleTitle"
        android:layout_above="@+id/bottomViewHolderBattleView"/>

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleBattle"
        android:id="@+id/textBattleTitle"
        android:layout_width="match_parent"
        android:textSize="25dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music"
        android:id="@+id/checkBox"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound"
        android:id="@+id/checkBox2"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/checkBox"
        android:layout_toEndOf="@+id/checkBox" />

    <!-- android:numColumns="aut"-->
    <!--android:columnWidth="50dp"-->


</RelativeLayout>